added properties for server and client.

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -3,3 +3,9 @@ loadBalancer.hostName = localhost
 loadBalancer.clientPort = 1999
 loadBalancer.serverPort = 2000
 
+# Matrix server properties
+matrixServer.clientPort = 2001
+
+# Client properties
+matrixClient.inputFile  = src/main/resources/in.txt
+matrixClient.outputFile = src/main/resources/out.txt
