--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -1,5 +1,5 @@
 # Load balancer properties
-loadBalancer.hostName = localhost
+loadBalancer.hostName = ice01.ee.cooper.edu
 loadBalancer.clientPort = 1999
 loadBalancer.serverPort = 2000
 
